# Kangaroo

./: .gitignore  BilateralFilter.cpp  CMakeLists.txt  CamTest.cpp  CameraViewer.cpp  CudaImage.h  DenseStereo.cpp  DisplayUtils.h  ImuTest.cpp  KinectHeightmap.cpp  LeastSquaresBlockHelpers.h  MultiStreamViewer.cpp  PangolinGLConsole.cpp  README.txt  RpgCameraOpen.h  ScanlineRectify.h  StereoCalibration.cpp  StereoViewer.cpp  ViconAlign.cpp  ViconTest.cpp  ViconTracker.h  kernel.cu  kernel.h
CMakeModules/: FindCeresSolver.cmake  FindPHIDGETS.cmake
applications/: BilateralFilter.cpp  CMakeLists.txt  CameraViewer.cpp  CheckMemory.cpp  CudaSumSpeed.cpp  Deconvolution.cpp  Denoising.cpp  DenseStereo.cpp  Features.cpp  GpsConvert.cpp  GuidedFilter.cpp  ImageMatching.cpp  ImuTest.cpp  Inpainting.cpp  KinectFusion.cpp  KinectHeightmap.cpp  KinectTrack.cpp  Manhatten.cpp  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesTables.h  MocapFusion.cpp  MocapMultiDepthFusion.cpp  NodeTest.cpp  NodeTestMessages.proto  OddsAndEnds.cpp  PoseGraph.cpp  PoseGraphGps.cpp  PoseGraphVicon.cpp  Raycast.cpp  RgbdCalibration.cpp  SdfDifference.cpp  SdfFusion.cpp  SimpleStereo.cpp  StereoCalibration.cpp  StereoCalibrationOpenCV.cpp  StereoRectifyOpenCV.cpp  StereoViewer.cpp  TriggerTest.cpp  ViconAlign.cpp  (+1 more)
applications/common/: AssimpVboExport.h  BaseDisplay.h  BaseDisplayCuda.h  BaselineFromCamModel.h  BitonicSortingNetwork.h  CVarHelpers.h  CameraModelPyramid.h  CeresQuatXYZW.h  DisplayUtils.h  GLCameraHistory.h  GLPoseGraph.h  Handler3dGpuDepth.h  HeightmapFusion.h  ImageSelect.h  LoadPosesFromFile.h  LocalTileGrid.h  PoseGraph.h  RpgCameraOpen.h  SaveGIL.h  SaveMeshlab.h  SaveMvlCamModel.h  SavePPM.h  ScanlineRectify.h  StereoIntrinsicsOptimisation.h  Tracking.h  ViconFileTracking.h  ViconTracker.h
applications/examples/: Anaglyph.cpp  BilateralFilter.cpp  CMakeLists.txt  CudaSumSpeed.cpp  Deconvolution.cpp  Denoising.cpp  Features.cpp  GuidedFilter.cpp  Inpainting.cpp  Raycast.cpp  SdfDifference.cpp  SdfFusion.cpp  StereoViewer.cpp
applications/kinectfusion/: CMakeLists.txt  main.cpp
applications/stereo/: CMakeLists.txt  main.cpp
applications/stereo2/: main.cpp
common/: AssimpMissing.h  AssimpVboExport.h  BaseDisplay.h  CamParam.h  DisplayUtils.h  HeightmapFusion.h  ImageSelect.h  LeastSquaresBlockHelpers.h  RpgCameraOpen.h  ScanlineRectify.h  StereoIntrinsicsOptimisation.h  ViconTracker.h
cu/: Image.h  Mat.h  MatUtils.h  Pyramid.h  Volume.h  all.h  cu_all.cu  cu_anaglyph.cu  cu_anaglyph.h  cu_bilateral.cu  cu_bilateral.h  cu_convert.cu  cu_convert.h  cu_cutil_math_extra.h  cu_dense_stereo.cu  cu_dense_stereo.h  cu_heightmap.cu  cu_heightmap.h  cu_index_buffer.cu  cu_lookup_warp.cu  cu_lookup_warp.h  cu_median.cu  cu_median.h  cu_model_refinement.cu  cu_model_refinement.h  cu_normals.cu  cu_openni.cu  cu_patch_score.h  cu_plane_fit.cu  cu_resample.cu  cu_resample.h  launch_utils.h  patch_score.h  pixel_convert.h  sampling.h
include/kangaroo/: BoundedVolume.h  CostVolElem.h  CudaTimer.h  Image.h  ImageApron.h  ImageKeyframe.h  InvalidValue.h  Mat.h  MatUtils.h  Pyramid.h  Volume.h  cu_depth_tools.h  cu_integral_image.h  cu_lookup_warp.h  cu_manhattan.h  cu_median.h  cu_model_refinement.h  cu_operations.h  cu_painting.h  cu_plane_fit.h  cu_sdffusion.h  cu_segment_test.h  cu_tgv.h  hamming_distance.h  launch_utils.h  platform.h  sampling.h
include/kangaroo/extra/: BaseDisplay.h  BaseDisplayCuda.h  BaselineFromCamModel.h  CeresQuatXYZW.h  DisplayUtils.h  Handler3dGpuDepth.h  HeightmapFusion.h  ImageSelect.h  LoadPosesFromFile.h  LocalTileGrid.h  SaveMeshlab.h  ViconFileTracking.h
kangaroo/: BoundedVolume.h  BoundingBox.h  CMakeLists.txt  CostVolElem.h  CudaTimer.h  Divergence.h  Image.h  ImageApron.h  ImageIntrinsics.h  ImageKeyframe.h  InvalidValue.h  KangarooConfig.cmake.in  LeastSquareSum.h  MarchingCubes.cpp  MarchingCubes.cu  MarchingCubes.h  MarchingCubesTables.h  Mat.h  MatUtils.h  Memory.h  Pyramid.h  Sdf.h  Volume.h  config.h.in  cu_all.cu  cu_anaglyph.cu  cu_anaglyph.h  cu_bilateral.cu  cu_bilateral.h  cu_blur.cu  cu_blur.h  cu_census.cu  cu_census.h  cu_convert.cu  cu_convert.h  cu_convolution.cu  cu_convolution.h  cu_deconvolution.cu  cu_deconvolution.h  cu_dense_stereo.cu  (+53 more)
kangaroo/CUDA_SDK/: cutil_math.h  sharedmem.h
kangaroo/common/: AssimpVboExport.h  BitonicSortingNetwork.h  DisplayUtils.h  GLPoseGraph.h  Handler3dGpuDepth.h  HeightmapFusion.h  RpgCameraOpen.h  SaveGIL.h  SaveMeshlab.h  SavePPM.h  ScanlineRectify.h
kangaroo/extra/: BaseDisplay.h  BaselineFromCamModel.h  CVarHelpers.h  CameraModelPyramid.h  Handler3dGpuDepth.h  ImageSelect.h  SaveGIL.h  SaveMeshlab.h  SavePPM.h
src/: cu_anaglyph.cu  cu_bilateral.cu  cu_census.cu  cu_convert.cu  cu_depth_tools.cu  cu_index_buffer.cu  cu_integral_image.cu  cu_median.cu  cu_plane_fit.cu  cu_raycast.cu  cu_resample.cu  cu_sdffusion.cu  cu_semi_global_matching.cu
